objects/Partner_Activity__c.object
<CustomObject>
    <description>For use with Partner Portal to allow creation and assignment of activities to Partners while prohibiting partners from see other events as well as limiting specific profiles to seeing the activities of partners</description>
    <fields>
        <fullName>Additional_Attendees__c</fullName>
        <label>Additional Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Activities</relationshipLabel>
        <relationshipName>Partner_Activities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Partner Activity</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>